--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
-    <string name="app_name">Jigsaw Puzzle</string>
+    <string name="app_name">Puzzle Game</string>
     <string name="success">Congratulations on clearing the game!</string>
     <string name="next">Successfully unlocked a new level!</string>
     <string name="restart">Restart?</string>
+    <string name="thanks">Thanks.</string>
     <string name="ok">Sure</string>
     <string name="exit">Quit</string>
-    <string name="complete">You are a genius, congratulations on passing the level! !</string>
+    <string name="complete">You are a genius, congratulations on passing the Game! !</string>
     <string name="tips">Tips</string>
 </resources>
